--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
                 </div>
                 <div>
                     <div class="flex justify-between items-center border-b mb-4">
-                        <div class="flex">
-                            <button data-tab="all" class="tab-btn py-3 px-4 font-bold text-main-blue border-b-2 border-main-blue">전체</button>
-                            <button data-tab="paid" class="tab-btn py-3 px-4 font-bold text-gray-500">입금 완료</button>
-                            <button data-tab="unpaid" class="tab-btn py-3 px-4 font-bold text-gray-500">입금 대기</button>
-                            <button data-tab="cancelled" class="tab-btn py-3 px-4 font-bold text-gray-500">취소</button>
+                        <div class="flex text-xs">
+                            <button data-tab="all" class="tab-btn py-2 px-2 font-bold text-main-blue border-b-2 border-main-blue whitespace-nowrap">전체</button>
+                            <button data-tab="paid" class="tab-btn py-2 px-2 font-bold text-gray-500 whitespace-nowrap">입금완료</button>
+                            <button data-tab="unpaid" class="tab-btn py-2 px-2 font-bold text-gray-500 whitespace-nowrap">입금대기</button>
+                            <button data-tab="cancelled" class="tab-btn py-2 px-2 font-bold text-gray-500 whitespace-nowrap">취소</button>
                         </div>
-                        <button id="add-project-member-btn" class="text-main-blue font-bold text-sm"><i class="fas fa-plus-circle mr-1"></i>멤버 추가</button>
+                        <button id="add-project-member-btn" class="text-main-blue font-bold text-xs"><i class="fas fa-plus-circle mr-1"></i>멤버 추가</button>
                     </div>
                     <div id="member-list-vertical" class="space-y-3"></div>
                 </div>
@@ -199,8 +199,8 @@
                     <h1 class="text-3xl font-extrabold text-gray-800">새 활동 추가</h1>
                 </header>
                 <div class="flex border-b mb-6">
-                    <button data-form="project" class="form-tab-btn flex-1 pb-3 font-bold text-main-blue border-b-2 border-main-blue">프로젝트</button>
-                    <button data-form="expense" class="form-tab-btn flex-1 pb-3 font-bold text-gray-500">지출</button>
+                    <button data-form="project" class="form-tab-btn flex-1 pb-2 font-bold text-main-blue border-b-2 border-main-blue text-sm">프로젝트</button>
+                    <button data-form="expense" class="form-tab-btn flex-1 pb-2 font-bold text-gray-500 text-sm">지출</button>
                 </div>
                 <form id="add-project-form" class="space-y-6 pb-20">
                     <div>
