--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="모임 회비, 정산, 관리까지 한 번에! 모두의 총무">
+    <meta name="description" content="모임 회비, 정산, 관리까지 한 번에! allpaid(올페이드)">
     <meta name="keywords" content="모임, 회비, 정산, 총무, 동아리, 학생회">
-    <meta name="author" content="모두의 총무">
-    <meta property="og:title" content="모두의 총무">
+    <meta name="author" content="allpaid(올페이드)">
+    <meta property="og:title" content="allpaid(올페이드)">
     <meta property="og:description" content="모임 회비, 정산, 관리까지 한 번에!">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://your-username.github.io/your-repo-name/">
-    <title>모두의 총무</title>
+    <title>allpaid(올페이드)</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -33,7 +33,9 @@
             <!-- 홈 화면 -->
             <div id="home-screen" class="screen active">
                 <div class="home-header">
-                    <div class="home-title">모두의 총무</div>
+                    <div style="display:flex; flex-direction:column; align-items:center;">
+                        <img src="./allpaid-logo.svg" alt="allpaid 로고" style="height:2.2rem; width:auto; margin-bottom:6px;" />
+                    </div>
                     <div class="home-desc">모임 회비, 정산, 관리까지 한 번에!</div>
                 </div>
                 <!-- 주요 기능 버튼들 -->
@@ -248,7 +250,7 @@
                         <div class="w-16 h-16 bg-gray-200 rounded-full flex items-center justify-center text-3xl mr-4">👤</div>
                         <div>
                             <p class="text-2xl font-bold text-gray-800">김총무 님</p>
-                            <p class="text-gray-500">modu@chongmu.com</p>
+                            <p class="text-gray-500">allpaid@allpaid.com</p>
                         </div>
                     </div>
                 </div>
