--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="모임 회비, 정산, 관리까지 한 번에!">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://your-username.github.io/your-repo-name/">
-    <title>allpaid(올페이드)</title>
+    <title>allpaid - 투명하고 스마트한 정산관리</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
